# benchmark

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
benchmark/: config.yaml  main.py
benchmark/application/: analysis_utils.py  app.py  cli.py  config.py  helpers.py  main.py  types.py  utils.py
benchmark/core/: types.py
benchmark/core/adapters/: __init__.py  client_api_adapter.py  client_api_request_prediction_adapter.py  csv_metric_repository_adapter.py  helpers.py  metric_repository_adapter.py  nats_request_prediction_adapter.py  time_provider_adapter.py  utils.py  uuid_provider_adapter.py
benchmark/core/domain/: __init__.py  prediction_request.py
benchmark/core/ports/: __init__.py  id_provider_port.py  metric_repository_port.py  request_prediction_port.py  time_provider_port.py
benchmark/core/use_cases/: benchmark.py  repository.py  run_benchmark_use_case.py  save_benchmark_use_case.py
src/application/: main.py
src/core/: types.py
src/core/adapters/: client_api_adapter.py  metric_repository_adapter.py  nats_adapter.py  nats_request_prediction_adapter.py  time_provider_adapter.py  utils.py  uuid_provider_adapter.py
src/core/domain/: prediction_request.py
src/core/ports/: client_message_port.py  client_rest_api_port.py  id_provider_port.py  metric_repository_port.py  request_prediction_port.py
src/core/use_cases/: benchmark.py  benchmark_api.py  benchmark_messaging.py
tests/: utils.py
tests/core/use_cases/: benchmark_api_test.py  benchmark_messaging_test.py  benchmark_test.py
