[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["Washington Luiz Meireles de Lima <luiz.meireles@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
black = "^22.6.0"
click = "^8.1.3"
tqdm = "^4.64.0"
tabulate = "^0.9.0"
uvloop = "^0.17.0"
nats-py = "^2.2.0"
aiohttp = "^3.8.3"
cchardet = "^2.1.7"
aiodns = "^3.0.0"
multipledispatch = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
benchmark = "benchmark.application.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
